--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,10 +2,17 @@
   margin: 0;
   padding: 0;
   font-family: "Segoe UI", Roboto, Oxygen;
+  color: whitesmoke;
 }
 
 h4 {
   cursor: default;
+  font-weight: 500;
+  font-size: 14px;
+}
+
+#background-image {
+  background-size: cover;
 }
 
 .btn-origanl {
@@ -51,9 +58,14 @@ body {
 }
 
 /* taskbar */
+.theme {
+  background-color: rgba(0, 0, 0, 0.4) !important;
+  -webkit-backdrop-filter: blur(32px) !important;
+          backdrop-filter: blur(32px) !important;
+}
+
 .taskbar {
   position: absolute;
-  background-color: #f3f3f3;
   width: 100%;
   bottom: 0;
   left: 0;
@@ -65,16 +77,11 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  /*start*/
-  /*start*/
-  /*start*/
-  /* background-color: rgba(243, 243, 243, 0.3);
-  backdrop-filter: blur(4px); */
 }
 
 .ico {
-  width: 1.5rem;
-  padding: 0.3rem 0.6rem;
+  width: 26px;
+  padding: 10px 7px 2px 7px;
   -webkit-filter: brightness(1.1);
   filter: brightness(1.1);
 }
@@ -90,6 +97,7 @@ body {
 }
 
 .right {
+  height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -101,7 +109,21 @@ body {
           justify-content: space-evenly;
   position: absolute;
   right: 0;
-  /* margin: 6px 0; */
+  color: #3f3f3f;
+}
+
+.right-side {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  position: relative;
+  right: 0;
   height: 100%;
   width: 15rem;
   color: #3f3f3f;
@@ -119,9 +141,9 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  font-size: 0.6rem;
-  font-weight: 600;
-  text-align: center;
+  font-size: 0.7rem;
+  font-weight: 400;
+  text-align: right;
 }
 
 .notify {
@@ -142,12 +164,13 @@ body {
   position: absolute;
   left: 50%;
   bottom: 3rem;
-  -webkit-transform: translate(-50%, 6%);
-          transform: translate(-50%, 6%);
+  -webkit-transform: translate(-50%, 2rem);
+          transform: translate(-50%, 2rem);
   width: 36rem;
   background: #f6f6f6;
-  height: 37rem;
+  height: auto;
   border-radius: 8px;
+  border: 1px solid #3f3f3f;
   z-index: 9;
   -webkit-transition: all 0.3s ease-in;
   transition: all 0.3s ease-in;
@@ -159,8 +182,62 @@ body {
   height: 100%;
 }
 
+.show-desktop {
+  width: 15px;
+  height: 100%;
+  border: 0.1px solid transparent;
+  background: transparent;
+  position: relative;
+}
+
+.show-desktop:hover {
+  border-right: 0.1px solid whitesmoke;
+  border-spacing: 13px;
+}
+
+.wrap {
+  padding: 6px 6px;
+}
+
+.taskbar-icon-wrap {
+  padding: 8px 10px;
+}
+
+.taskbar-icon-wrap:hover {
+  border-radius: 3px;
+  background: #ffffff21;
+}
+
 .cover {
   cursor: default;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+}
+
+.wrap:hover {
+  border-radius: 3px;
+  background: #f0f8ff2e;
+}
+
+#start {
+  -webkit-transition: 300ms ease;
+  transition: 300ms ease;
+}
+
+#start:active {
+  -webkit-transform: scale(65%);
+          transform: scale(65%);
+  -webkit-filter: brightness(0.5%);
+          filter: brightness(0.5%);
 }
 
 .icons {
@@ -169,21 +246,20 @@ body {
   display: grid;
   -ms-grid-columns: (1fr)[6];
       grid-template-columns: repeat(6, 1fr);
+  padding: 6px;
   -ms-grid-row-align: center;
       align-self: center;
   -ms-grid-column-align: center;
       justify-self: center;
   place-content: center;
-  -webkit-column-gap: 2rem;
-          column-gap: 2rem;
 }
 
 .icon {
-  width: 2.6rem;
+  width: 35px;
 }
 
 .icon-name {
-  font-size: 0.8rem;
+  font-size: 13px;
   cursor: default;
 }
 
@@ -226,6 +302,7 @@ body {
           column-gap: 1rem;
   -ms-grid-columns: (1fr)[2];
       grid-template-columns: repeat(2, 1fr);
+  min-height: 11rem;
   padding: 0 2rem;
 }
 
@@ -248,14 +325,16 @@ body {
 }
 
 .app-info p {
-  color: #3f3f3f;
   font-size: 0.7rem;
   cursor: default;
 }
 
-.app-text,
-.app-desc {
+.app-text .app-desc {
   cursor: default;
+}
+
+.app-text {
+  font-weight: 400;
 }
 
 .cell {
@@ -265,7 +344,6 @@ body {
 }
 
 .account {
-  background: #f3f3f3;
   height: 3.5rem;
   border-radius: 8px;
   display: -webkit-box;
@@ -278,7 +356,7 @@ body {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  position: relative;
+  border-top: 1px solid #3f3f3f;
   bottom: -6rem;
 }
 
@@ -296,14 +374,15 @@ body {
 
 .user-box img {
   background-size: cover;
-  width: 3rem;
-  height: 3rem;
+  width: 1.5rem;
+  height: 1.5rem;
   border-radius: 50%;
   background: #e6e6e6;
+  border: 0.2px solid whitesmoke;
 }
 
 .user-name {
-  padding: 0 1rem;
+  padding: 0 0.4rem 0 0.6rem;
   font-size: 1rem;
   cursor: default;
 }
