--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -1,8 +1,12 @@
+$icon-color : #c9c9c9;
 * {
   margin: 0;
   padding: 0;
   font-family: "Segoe UI", Roboto, Oxygen;
   color: whitesmoke;
+}
+svg{
+  fill:  fill="#c9c9c9"!important;
 }
 
 h4 {
@@ -124,31 +128,6 @@ body {
   width: 2rem;
 }
 
-/* start */
-
-.startmenu {
-  position: absolute;
-  bottom: -40rem;
-  width: 34rem;
-  // text-align: center;
-  z-index: 9;
-  transition: all 0.3s ease-in;
-}
-
-.startContent {
-  position: absolute;
-  left: 50%;
-  bottom: 3rem;
-  transform: translate(-50%, 2rem);
-  width: 36rem;
-  background: #f6f6f6;
-  height: auto;
-  border-radius: 8px;
-  border: 1px solid#3f3f3f;
-  z-index: 9;
-  transition: all 0.3s ease-in;
-}
-
 /* video */
 
 #vid {
@@ -173,22 +152,39 @@ body {
 }
 .taskbar-icon-wrap {
   padding: 8px 10px;
-}
-.taskbar-icon-wrap:hover {
-  border-radius: 3px;
-  background: #ffffff21;
+  &:hover {
+    border-radius: 3px;
+    background: #ffffff21;
   // border: solid .1px transparent;
   // background-clip: padding-box;
+ }
+ &:active{
+  animation: Taskber-icon-open 300ms ease-in;
+ }
 }
-// .taskbar-icon-wrap::after{
-      // position: relative;
-      // bottom: 7px;
-      // content: '';
-      // width: 4px;
-      // height: 1px;
-      // border-radius: 50%;
-      // background-color: #0096ff;
-// }
+
+@keyframes Taskber-icon-open {
+  0%{
+    transform: scale(75%)translateY(-3px);
+  }
+  50%{
+    transform: translateY(-3px) scale(100%);
+  }
+}
+/*
+0%{
+    transform: scale(75%)translateY(-3px);
+  }
+  50%{
+    transform: translateY(-3px) scale(100%);
+  }
+0%{}
+45%{}
+90%{}
+100%{}
+*/
+
+
 
 .cover {
   cursor: default;
@@ -308,39 +304,35 @@ body {
   cursor: default;
 }
 
-article {
-  width: 52rem; /*JS Letral*/
-  height: 40rem;
-  position: absolute;
-  bottom: -40rem;
-  background: #ffffff;
-  border-radius: 8px;
-  overflow: hidden;
-}
-
 #header {
   display: flex;
   flex-direction: column;
-  background: #f2f1f6;
+  // background: #f2f1f6;
+  // background-color: rgba(0, 0, 0, 0.4) !important;
+  // backdrop-filter: blur(32px) !important;
 }
 
+.sidebar-item-text{
+  font-weight: 200;
+  font-size: .8rem;
+}
 .top-line {
   width: 100%;
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background: #edecf2;
 
   .top-left {
     display: flex;
     align-items: center;
-    background: #edecf2;
+    background: transparent;
   }
 
   .top-right {
     display: flex;
     align-items: center;
-    background: #edecf2;
+    background: transparent;
     padding: 0.5rem;
   }
 }
@@ -387,7 +379,12 @@ h1 {
 .baseline {
   display: flex;
   border-bottom: 1px solid #c5c5c5;
-  background: #f2f1f6;
+}
+
+.explorer-header{
+
+  background-color: rgba(0, 0, 0, 0.4) !important;
+  backdrop-filter: blur(32px) !important;
 }
 
 .tab-img {
@@ -399,6 +396,7 @@ h1 {
 
 #main {
   display: flex;
+  background: #191919;
 }
 
 .aside {
@@ -438,8 +436,8 @@ h1 {
 }
 .folder-title {
   padding: 0.3rem 0.5rem;
-  font-weight: 600;
-  font-size: 1.1rem;
+  font-weight: 300;
+  font-size: .85rem;
 }
 .folder-ico {
   width: 3rem;
