--- a/CSS/animation.scss
+++ b/CSS/animation.scss
@@ -5,13 +5,14 @@ article {
   bottom: -40rem;
   border-radius: 8px;
   overflow: hidden;
+  transition: .3s ease-in;
 }
 
 /* start */
 
 .startmenu {
   position: absolute;
-  bottom: -40rem;
+  bottom: -50rem;
   width: 34rem;
   // text-align: center;
   z-index: 9;
@@ -29,7 +30,7 @@ article {
   border-radius: 8px;
   border: 1px solid#3f3f3f;
   z-index: 9;
-  transition: all 0.3s ease-in;
+  transition: all 3s ease-in;
 }
 
 // 0%{
@@ -38,19 +39,19 @@ article {
 // 50%{
 //   transform: translateY(-3px) scale(100%);
 // }
-.open-explorer-animation{
+.open-explorer-animation:active{
     animation: explorer-icon-open 200ms  ease-in;
 }
 @keyframes explorer-icon-open {
     0%{
-        opacity: 1;
         display: block;
 
     }
     10%{
-        bottom: 0;
+        opacity: 1;
     }
     100%{
+        bottom: 3rem;
     }
 }
 .close-explorer-animation{
@@ -63,10 +64,87 @@ article {
     }
     90%{
         opacity: 0;
-        display: none;
     }
     100%{
+        display: none;
+    }
+}
+.close-animation{
+    animation: close-animation 300ms ease-in;
+}
+@keyframes close-animation {
+    0%{
+        bottom: -50rem;
+    opacity: 1;}
+    95%{
+        opacity: 0;
+    }
+    100%{        
+        display: none;
     }
 }
   
+.open-animation{
+    animation: close-animation 300ms ease-in;
+}
+@keyframes open-animation {
+    0%{
+        display: block;
+        opacity: 0;
+    }
+    5%{
+        opacity: 1;
+    }
+    100%{        
+        bottom: 3rem;
+    }
+}
   
+  .notify-sys{
+    position: absolute;
+    bottom: 3.7rem;
+    right: 1rem;
+  }
+  .setting{
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
+    background: rgba(240, 248, 255, 0.1);
+    backdrop-filter: blur(19px);
+    border-radius: 4px;
+  }
+  .picture-url{
+    font-size: 16px;
+    padding: 6px 15px;
+    text-align: start;
+    // width: 6rem;
+    background: #202225;
+    border: 0px;
+    outline: 0px;
+    border-radius: 5px;
+    border-bottom: 2px solid #34ade9;
+    cursor: text;
+    &:hover{
+        border-bottom: 2px solid #0f97db;
+    }
+    // &:valid{
+    //     border-bottom: 2px solid #4cff88;
+    // }
+    // &:invalid{
+    //     border-bottom: 2px solid #ff7f4c;
+    // }
+  }
+  .setting-cont{
+      margin: 1rem;
+      display: flex;
+      flex-direction: column;
+      .font-slider{
+          padding: 2px;
+          ::-webkit-progress-bar{
+              background-color: blue;
+          }
+      }
+    //   .btn-slider{
+
+    //   }
+  }
